# Doosan-Robotics-Cereal-Number

./: README.md
cereal_order_app/: README.md  pubspec.yaml
cereal_order_app/android/app/: build.gradle.kts
cereal_order_app/ios/Runner/: Info.plist
cereal_order_app/ios/Runner.xcodeproj/: project.pbxproj
cereal_order_app/lib/: main.dart
cereal_order_app/linux/: CMakeLists.txt
cereal_order_app/test/: widget_test.dart
cereal_order_app/web/: index.html  manifest.json
cereal_order_app/windows/: CMakeLists.txt
ros2_ws/src/ai_ros/: package.xml  (+2 more)
ros2_ws/src/gwonho_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/gwonho_interfaces/action/: RunMotion.action
ros2_ws/src/gwonho_interfaces/srv/: WaitForWeight.srv
store_management_app/: ORDER_MANAGEMENT.md  pubspec.yaml
store_management_app/lib/: main.dart
store_management_app/linux/: CMakeLists.txt
store_management_app/web/: index.html
vocie_order_bridge/: FLUTTER_TODO.md  FLUTTER_UI_TODO.md  INTEGRATION_GUIDE.md  UPDATED_VOICE_ORDER_UI.md  package.xml  setup.cfg  setup.py
vocie_order_bridge/log/: latest_list
vocie_order_bridge/vocie_order_bridge/: voice_order_listener.py
vocie_order_bridge/voice_order/: .gitignore  README.md  gpt_assistant.py  main.py  main_gpt.py  order_parser.py  requirements.txt  test_whisper.py
voice_order/: README.md  audio.py  gpt_assistant.py  main_gpt.py  speech.py
voice_order_realtime/: package.xml  setup.cfg  setup.py
voice_order_realtime/log/: latest_list
voice_order_realtime/voice_order_realtime/: gpt_realtime_client.py  realtime_voice_order_node.py
(+84 files in other folders)
